--- a/ui/package.json
+++ b/ui/package.json
@@ -16,26 +16,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.7",
-    "@angular/common": "^7.2.7",
-    "@angular/compiler": "^7.2.7",
-    "@angular/core": "^7.2.7",
-    "@angular/forms": "^7.2.7",
-    "@angular/http": "^7.2.7",
-    "@angular/platform-browser": "^7.2.7",
-    "@angular/platform-browser-dynamic": "^7.2.7",
-    "@angular/router": "^7.2.7",
+    "@angular/animations": "^7.2.8",
+    "@angular/cdk": "^7.2.7",
+    "@angular/common": "^7.2.8",
+    "@angular/compiler": "^7.2.8",
+    "@angular/core": "^7.2.8",
+    "@angular/forms": "^7.2.8",
+    "@angular/http": "^7.2.8",
+    "@angular/platform-browser": "^7.2.8",
+    "@angular/platform-browser-dynamic": "^7.2.8",
+    "@angular/router": "^7.2.8",
+    "@nebular/auth": "^3.4.0",
+    "@nebular/bootstrap": "^3.4.0",
+    "@nebular/theme": "^3.4.0",
     "bootstrap": "^4.1.1",
-    "font-awesome": "^4.7.0",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "nebular-icons": "^1.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^7.2.7",
-    "@angular/language-service": "^7.2.7",
+    "@angular/cli": "~7.3.5",
+    "@angular/compiler-cli": "^7.2.8",
+    "@angular/language-service": "^7.2.8",
+    "@schematics/angular": "^7.2.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
